--- a/styles/global.css
+++ b/styles/global.css
@@ -6,16 +6,45 @@
 }
 
 :root {
+  /* colors */
   --red: #E3646E;
   --purple: #BB72E9;
   --blue: #3996DB;
   --green: #82BC4F;
   --yellow: #EABD5F;
-
   --gray-100: #0D0E11;
   --gray-200: #16181D;
   --gray-300: #292C34;
   --gray-400: #878EA1;
   --gray-500: #C0C4CE;
   --gray-600: #E2E4E9;
+  /* fonts */
+  --title-lg: 800 56px/120% "Asap", sans-serif;
+  --title-md: 800 24px/120% "Asap", sans-serif;
+  --title-sm: 800 16px/120% "Asap", sans-serif;
+  --subtitle: 400 20px/120% "Inconsolata", serif;
+  --text-md: 400 16px/140% "Maven pro", sans-serif;
+  --text-sm: 400 14px/140% "Maven pro", sans-serif;
+}
+
+body {
+  background-color: var(--gray-200);
+  color: var(--gray-500);
+}
+
+h1,
+h2,
+h3 {
+  font: var(--text-md);
+  color: var(--gray-600);
+}
+
+img {
+  max-width: 100%;
+}
+
+.container {
+  max-width: 1280px;
+  padding-inline: 32px;
+  margin-inline: auto;
 }
