--- a/styles/global.css
+++ b/styles/global.css
@@ -30,7 +30,9 @@
 body {
   background-color: var(--gray-200);
   color: var(--gray-500);
+  font: var(--text-sm);
 }
+
 
 h1,
 h2,
@@ -41,6 +43,7 @@ h3 {
 
 img {
   max-width: 100%;
+  max-height: 100%;
 }
 
 .container {
