--- a/styles/utilitys.css
+++ b/styles/utilitys.css
@@ -2,6 +2,14 @@
   font: var(--subtitle);
 }
 
+.title-md {
+  font: var(--title-md);
+}
+
+.title-sm {
+  font: var(--title-sm);
+}
+
 .text-lg {
   font: var(--title-lg);
 }
