--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,16 +1,16 @@
-#projects {
+.title-info {
+  text-align: center;
+  margin-bottom: 56px;
 
-  padding-block: 72px 144px;
-
-  header {
-    text-align: center;
-    margin-bottom: 56px;
-
-    h3 {
-      color: var(--red);
-      margin-bottom: 8px;
-    }
+  h3 {
+    color: var(--red);
+    margin-bottom: 8px;
   }
+}
+
+
+#projects {
+  padding-block: 72px 144px;
 
   .projects-list {
     display: flex;
@@ -37,7 +37,7 @@
     }
 
     .card:hover {
-      border: 1px solid var(--gray-400)
+      border: 1.5px solid var(--gray-400)
     }
   }
 }
