--- a/styles/header.css
+++ b/styles/header.css
@@ -13,25 +13,29 @@
     flex-direction: column;
     gap: 80px;
 
-    &>img {
-      margin-bottom: 56px;
-    }
-
-    h3 {
-      margin-bottom: 8px;
-
-      span {
-        color: var(--red);
-      }
-    }
-
-    h1 {
-      margin-bottom: 20px;
-    }
-
     .header-info {
       max-width: 680px;
       text-align: center;
+
+      &>img {
+        margin-bottom: 56px;
+      }
+
+      h3 {
+        margin-bottom: 8px;
+
+        span {
+          color: var(--red);
+        }
+      }
+
+      h1 {
+        margin-bottom: 20px;
+      }
+
+      p {
+        color: var(--gray-400);
+      }
     }
 
     .tags {
